--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -2,13 +2,15 @@
 ^renv\.lock$
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^LICENSE\.md$
+^.+?.md$
 ^PGA
 ^golfpkgdev
 ^.+?.jpeg
 ^.+?.tiff
+^.+?.png
+^.+?.html
 ^data-raw$
-^Card.csv
-^golf_data
+^.+?.csv
 ^scorecard_update
 compose_email
+^golf_data$
