--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,9 @@ Imports:
     dplyr,
     tidyr,
     lubridate,
-    assertthat
+    assertthat,
+    RSQLite,
+    DBI
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
 Depends:
